# agentforge

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  eval.yml
agentforge/: __init__.py  approval.py  config.py  conversation.py  evaluation.py  guardrail.py  logger.py  main.py  mcp_client.py  output_guardrail.py  prompts.py  redteam.py  redteam_fullstack.py  safety.py  tools.py
agentforge/memory/: __init__.py  response.py  semantic.py
agentforge/rag/: __init__.py  document_store.py  qa.py
agentforge/reasoning/: __init__.py  react_engine.py
agentforge/tools/: __init__.py  _safety.py  news.py  weather.py  wikipedia.py
docs/: AGENT_FLOW.md  HOW_WE_LEARN.md  REVISION_NOTES.md  ROADMAP_BREADTH_TOUR.md  ROADMAP_DOCUMENT_QA.md
mcp_servers/: news_server.py  redteam_attacker_server.py  weather_server.py  wikipedia_server.py
tests/: __init__.py  conftest.py  eval_dataset.json  test_approval.py  test_architecture.py  test_docs_qa.py  test_document_store.py  test_evaluation.py  test_fetch_mcp_contract.py  test_guardrail.py  test_guardrail_egress.py  test_input_guardrail.py  test_intent.py  test_logger.py  test_mcp_client.py  test_memory.py  test_memory_response.py  test_news_mcp_server.py  test_output_guardrail.py  test_output_guardrail_egress.py  test_rag_guardrail.py  test_react_engine.py  test_redteam.py  test_redteam_forced_fetch.py  test_redteam_fullstack.py  test_safety.py  test_tools.py  test_url_guard.py  test_weather_mcp_server.py  test_wikipedia_mcp_server.py
tests/fixtures/: EmployeeHandbook.txt  test_corpus.json
